package figuren;

abstract class Figur {

}