package figuren;

public class Pyramide extends
{
    private double seiteA;
    private double seiteB;
    private double seiteC;
    private double seiteD;
    
    private double hoeheA;
    private double hoeheB;
    private double hoeheC;
    private double hoeheD;

    public Pyramide(double seiteA, double seiteB, double seiteC, double seiteD, double hoeheA, double hoeheB, double hoeheC, double hoeheD) {
        this.seiteA = seiteA;
        this.seiteB = seiteB;
        this.seiteC = seiteC;
        this.seiteD = seiteD;
        this.hoeheA = hoeheA;
        this.hoeheB = hoeheB;
        this.hoeheC = hoeheC;
        this.hoeheD = hoeheD;
    }

    public
}
